[package]
name = "amf"
version = "0.1.0"
authors = ["aristotle9 <lanfan.1987@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
byteorder = "0.3"
xml-rs = "0.2"

[[bin]]
name = "flv-info"
path = "src/flv-info.rs"

[[bin]]
name = "flv-split"
path = "src/flv-split.rs"

[[bin]]
name = "flv-config"
path = "src/flv-config.rs"
