[package]
name = "timestamp-normalization"
version = "0.1.0"
authors = ["aristotle9 <lanfan.1987@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
byteorder = "0.3"
xml-rs = "0.2"
getopts = "0.2"
libc = "0.2.0"

[dependencies.flv-toolbox-rs]
path = "../../../"

[lib]
name = "timestamp_normalization"
path = "src/lib.rs"
crate-type = ["dylib"]
